Bugfix: Prevent contact card from overflowing page while invisible

--- a/src/css/TabContent.css
+++ b/src/css/TabContent.css
@@ -501,8 +501,11 @@ li::marker {
 	animation-name: fade-in;
 	opacity: 0;
 	animation-duration: 1.5s;
-	animation-delay: 2s;
 	animation-fill-mode: forwards;
+}
+
+.contact-info-invisible {
+	display: none;
 }
 
 @keyframes fade-in {
