--- a/src/css/Tabs.css
+++ b/src/css/Tabs.css
@@ -62,7 +62,7 @@
 	border-bottom: 1px solid var(--secondary-font-color);
 	min-height: 8vh;
 	cursor: pointer;
-	padding: 15px 30px 15px 30px;
+	padding: 15px 15vh 15px 15vh;
 }
 
 .tabheader:hover {
@@ -80,7 +80,7 @@
 	border-bottom: 0;
 	min-height: 8vh;
 	cursor: default;
-	padding: 15px 30px 15px 30px;
+	padding: 15px 15vh 15px 15vh;
 }
 
 .tabbody {
